k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: igohms-frontend
  namespace: igohms
spec:
  selector:
    app: igohms-frontend
  ports:
    - port: 80
      targetPort: 80
