k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: igohms-ingress
  namespace: igohms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.igohms.example.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: igohms-frontend
                port:
                  number: 80
    - host: api.igohms.example.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: igohms-backend
                port:
                  number: 80
